automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
     "      }\n",
     "    ]\n",
     "  }\n",
-    "]"
+    "]git "
    ]
   },
   {
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
